@@ -4173,48 +4173,48 @@ BEGIN
     LTEXT           "%",IDC_STAT_PERCENT,268,78,8,8
     PUSHBUTTON      "Setup Montage",IDC_BUT_SETUP_LMM_MONT,280,76,55,12
     CONTROL         "Autocontour grid squares",IDC_CHECK_AUTOCONTOUR,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,177,91,96,10
-    PUSHBUTTON      "Setup",IDC_BUT_SETUP_POLYMONT,317,154,23,12
-    PUSHBUTTON      "+",IDC_BUT_MG_MEDIUM_MAG_MAPS,175,103,10,9
-    CONTROL         "LD Search",IDC_RMMM_SEARCH,"Button",BS_AUTORADIOBUTTON | WS_GROUP,192,115,40,10
-    CONTROL         "LD View",IDC_RMMM_VIEW,"Button",BS_AUTORADIOBUTTON,236,115,34,10
-    CONTROL         "Current or set state",IDC_RMMM_CUR_OR_STATE,"Button",BS_AUTORADIOBUTTON,273,115,65,10
-    LTEXT           "Use:",IDC_STAT_USE2,176,115,16,8
-    COMBOBOX        IDC_COMBO_MMM_STATE1,197,127,70,30,CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP
-    COMBOBOX        IDC_COMBO_MMM_STATE2,270,127,70,30,CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP
-    COMBOBOX        IDC_COMBO_MMM_STATE3,197,141,70,30,CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP
-    LTEXT           "States:",IDC_STAT_SET_MMM_STATES,176,128,21,8
-    CONTROL         "Image",IDC_RSINGLE_IMAGE,"Button",BS_AUTORADIOBUTTON | WS_GROUP,195,155,29,10
-    CONTROL         "Polygon mont",IDC_RPOLYGON_MONT,"Button",BS_AUTORADIOBUTTON,224,155,51,10
-    CONTROL         "nXn mont",IDC_RFIXED_MONT,"Button",BS_AUTORADIOBUTTON,278,155,38,10
-    LTEXT           "Take:",IDC_STAT_MMM_ACQ_TYPE,176,155,19,8
+    PUSHBUTTON      "Setup",IDC_BUT_SETUP_POLYMONT,317,168,23,12
+    PUSHBUTTON      "+",IDC_BUT_MG_MEDIUM_MAG_MAPS,175,117,10,9
+    CONTROL         "LD Search",IDC_RMMM_SEARCH,"Button",BS_AUTORADIOBUTTON | WS_GROUP,192,129,40,10
+    CONTROL         "LD View",IDC_RMMM_VIEW,"Button",BS_AUTORADIOBUTTON,236,129,34,10
+    CONTROL         "Current or set state",IDC_RMMM_CUR_OR_STATE,"Button",BS_AUTORADIOBUTTON,273,129,65,10
+    LTEXT           "Use:",IDC_STAT_USE2,176,129,16,8
+    COMBOBOX        IDC_COMBO_MMM_STATE1,197,141,70,30,CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP
+    COMBOBOX        IDC_COMBO_MMM_STATE2,270,141,70,30,CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP
+    COMBOBOX        IDC_COMBO_MMM_STATE3,197,155,70,30,CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP
+    LTEXT           "States:",IDC_STAT_SET_MMM_STATES,176,142,21,8
+    CONTROL         "Image",IDC_RSINGLE_IMAGE,"Button",BS_AUTORADIOBUTTON | WS_GROUP,195,169,29,10
+    CONTROL         "Polygon mont",IDC_RPOLYGON_MONT,"Button",BS_AUTORADIOBUTTON,224,169,51,10
+    CONTROL         "nXn mont",IDC_RFIXED_MONT,"Button",BS_AUTORADIOBUTTON,278,169,38,10
+    LTEXT           "Take:",IDC_STAT_MMM_ACQ_TYPE,176,169,19,8
     PUSHBUTTON      "Setup",IDC_BUT_SETUP_AUTOCONT2,273,90,27,12
-    PUSHBUTTON      "Set Mapping Parameters",IDC_BUT_SETUP_MAPPING,215,167,85,12
-    PUSHBUTTON      "+",IDC_BUT_MG_FINAL_ACQ,175,186,10,9
-    COMBOBOX        IDC_COMBO_FINAL_STATE3,197,212,70,30,CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP
-    COMBOBOX        IDC_COMBO_FINAL_STATE2,270,198,70,30,CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP
-    COMBOBOX        IDC_COMBO_FINAL_STATE1,197,198,70,30,CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP
-    LTEXT           "States:",IDC_STAT_SET_FINAL_STATES,176,199,20,8
-    PUSHBUTTON      "Set Final Data Parameters",IDC_BUT_SETUP_FINAL_ACQ,212,249,90,12
+    PUSHBUTTON      "Set Mapping Parameters",IDC_BUT_SETUP_MAPPING,215,181,85,12
+    PUSHBUTTON      "+",IDC_BUT_MG_FINAL_ACQ,175,200,10,9
+    COMBOBOX        IDC_COMBO_FINAL_STATE3,197,226,70,30,CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP
+    COMBOBOX        IDC_COMBO_FINAL_STATE2,270,212,70,30,CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP
+    COMBOBOX        IDC_COMBO_FINAL_STATE1,197,212,70,30,CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP
+    LTEXT           "States:",IDC_STAT_SET_FINAL_STATES,176,213,20,8
+    PUSHBUTTON      "Set Final Data Parameters",IDC_BUT_SETUP_FINAL_ACQ,212,263,90,12
     PUSHBUTTON      "Run All",IDC_BUT_START_RUN,2,277,31,12
     CONTROL         "",IDC_TSS_LINE2,"Static",SS_BLACKFRAME | SS_SUNKEN,8,273,124,1
     CONTROL         "",IDC_TSS_LINE4,"Static",SS_BLACKFRAME | SS_SUNKEN,62,208,102,2
-    CONTROL         "",IDC_TSS_LINE6,"Static",SS_BLACKFRAME | SS_SUNKEN,301,107,33,2
-    CONTROL         "",IDC_TSS_LINE8,"Static",SS_BLACKFRAME | SS_SUNKEN,288,191,46,2
+    CONTROL         "",IDC_TSS_LINE6,"Static",SS_BLACKFRAME | SS_SUNKEN,301,121,33,2
+    CONTROL         "",IDC_TSS_LINE8,"Static",SS_BLACKFRAME | SS_SUNKEN,288,205,46,2
     CONTROL         "",IDC_TSS_LINE10,"Static",SS_BLACKFRAME | SS_SUNKEN,272,8,62,2
     CONTROL         "Acquire Grid Maps",IDC_CHECK_RUN_LMMS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,191,0,83,12
-    CONTROL         "Acquire Medium Mag Maps",IDC_CHECK_TAKE_MMMS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,191,102,109,12
-    CONTROL         "Run Final Acquisition",IDC_CHECK_RUN_FINAL_ACQ,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,191,185,92,12
-    COMBOBOX        IDC_COMBO_MMM_STATE4,270,141,70,30,CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP
-    COMBOBOX        IDC_COMBO_FINAL_STATE4,270,212,70,30,CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP
+    CONTROL         "Acquire Medium Mag Maps",IDC_CHECK_TAKE_MMMS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,191,116,109,12
+    CONTROL         "Run Final Acquisition",IDC_CHECK_RUN_FINAL_ACQ,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,191,199,92,12
+    COMBOBOX        IDC_COMBO_MMM_STATE4,270,155,70,30,CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP
+    COMBOBOX        IDC_COMBO_FINAL_STATE4,270,226,70,30,CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP
     PUSHBUTTON      "Run Undone",IDC_BUT_RUN_UNDONE,36,277,42,12
     PUSHBUTTON      "Open Nav",IDC_BUT_OPEN_NAV,2,191,33,12
     PUSHBUTTON      "Params",IDC_BUT_SET_GRID_TYPE,121,191,27,12
     PUSHBUTTON      "Open Right",IDC_BUT_CLOSE_RIGHT,137,270,30,9
     CONTROL         "Set && show states for each grid",IDC_CHECK_SET_FINAL_BY_GRID,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,177,226,107,10
-    PUSHBUTTON      "Revert to Global",IDC_BUT_REVERT_TO_GLOBAL,285,225,54,12
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,177,240,107,10
+    PUSHBUTTON      "Revert to Global",IDC_BUT_REVERT_TO_GLOBAL,285,239,54,12
     CONTROL         "Make frame directories under session directory",IDC_CHECK_FRAMES_UNDER_SESSION,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,177,238,162,10
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,177,252,162,10
     LTEXT           "Run   Sel    Status",IDC_STAT_RUN,12,1,61,8
     CONTROL         "",IDC_CHECK_TOGGLE_ALL,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,6,178,24,10
     PUSHBUTTON      "-",IDC_BUT_CLOSE_ALL,0,0,10,9
@@ -4223,6 +4223,8 @@ BEGIN
     LTEXT           "Note:",IDC_STAT_NOTE,97,179,15,8
     EDITTEXT        IDC_EDIT_GRID_NOTE,113,177,55,12,ES_AUTOHSCROLL
     PUSHBUTTON      "Logs",IDC_BUT_OPEN_LOGS,149,191,19,12
+    CONTROL         "Run script at end:",IDC_CHECK_SCRIPT_AT_END,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,177,104,63,10
+    COMBOBOX        IDC_COMBO_END_SCRIPT,240,104,100,12,CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP
 END
 
 IDD_MULGRID_SETTINGS DIALOGEX 0, 0, 311, 368
@@ -7888,7 +7890,13 @@ BEGIN
     IDC_BUT_APPLY_FINAL     "Make the global Final Data parameters be the same as the ones for this grid"
     IDC_BUT_RESTORE_CURFINAL 
                             "Restore the global Final Data acquisition parameters to original values"
+END
+
+STRINGTABLE
+BEGIN
     IDC_BUT_OPEN_LOGS       "Open secondary logs from all Acquire at Items runs on this grid"
+    IDC_CHECK_SCRIPT_AT_END "Run a script when each grid map is done,including autocontouring if any"
+    IDC_COMBO_END_SCRIPT    "Select the script to run when grid map is done"
 END
 
 #endif    // English (United States) resources
