@@ -338,6 +338,9 @@
       open.&nbsp; The group selection is stored in the session file, so groups will 
       already be defined if you start another run to take maps on other grids in the 
       set.</p>
+    <p><strong>Run script at end</strong></p>
+    <p>Select this option to run a script after each grid map is finished, after 
+      autocontouring if any.&nbsp; Pick the desired script in the drop-down box.</p>
     <p>&nbsp;</p>
     <p><strong><em>Acquire Medium Mag Maps</em></strong></p>
     <p>This section contains some controls governing the acThis section contains some controls governing the acquisition of 
