@@ -3,6 +3,8 @@ This is a record of changes to SerialEM since it was first publicly released.
 * marks changes or enhancements noticeable to the user, or items of particular
 significance, for the stable release version
 ============================================================================
+11/11/24: Added option to multigrid run a script after each grid map is done.
+
 11/10/24: Fixed installer copying Microsoft dlls on XP (In 4.1).
 
 11/4/24: Added ability to open secondary log windows; added button to
